# RapidOCR-dll

./: CMakeLists.txt  README.md  build_release.bat
include/: classifier.h  detector.h  ocr_common.h  ocr_engine.h  ocr_types.h  rapidocr_api.h  recognizer.h
python/: python_api.py  python_demo.py
src/: classifier.cpp  detector.cpp  ocr_common.cpp  ocr_engine.cpp  rapidocr_api.cpp  recognizer.cpp
